# design-system-python-flask-demo

./: .design-system-version  .gitignore  .pre-commit-config.yaml  .prettierrc.yml  Makefile  README.md  application.py  generate_backstop.py  generate_backstop_config.py  messages.pot  package-lock.json  package.json  pyproject.toml  test.py
.github/: PULL_REQUEST_TEMPLATE.md
scripts/: load_release.sh
static/examples/data/: search-index.json
static/favicons/: manifest.json  site.webmanifest
templates/: component-examples-list.html  component.html  external-css.html  index.html  test.html
translations/es/LC_MESSAGES/: messages.mo  messages.po
