[tool.poetry]
name = "design-system-python-flask-demo"
version = "0.1.0"
description = "This project is a demo of design system implemented using Python and Flask."
authors = ["ONSDigital"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
python-frontmatter = "^1.1.0"
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
djlint = "^1.34.1"


pre-commit = "^3.7.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
lint = "bash -c 'flake8 . && black -- check . && isort --check-only .'"